--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -9970,7 +9970,7 @@
     <value>Einzelwert-Widget</value>
   </data>
   <data name="MULTIPLE VALUES WIDGET" xml:space="preserve">
-    <value>Widget „Mehrere Werte“.</value>
+    <value>Widget „Mehrere Werte“</value>
   </data>
   <data name="GAUGE  WIDGET" xml:space="preserve">
     <value>Gauge-Widget</value>
