--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -10423,112 +10423,124 @@
     <value>שסתומי פריקה איבדו את מיקומם ההדדי נעילות מאובטחות. המפעיל מסוגל כעת לפתוח אותם באותו זמן במצב תחזוקה</value>
   </data>
   <data name="P_INFO_DISAB_SENS" xml:space="preserve">
-    <value>ניתן להשתמש בו באופן זמני במקרה של תקלה בחיישן. כאשר החיישן מושבת, הקריאה שלו מוסווה והערך המוצג ב-HMI הוא הערך שהתהליך צריך לייצור. יש להחליף את החיישן בהקדם האפשרי.</value>
+    <value>ניתן להשתמש בו זמנית במקרה של תקלה בחיישן. כאשר החיישן מושבת, הקריאה שלו מוסווה, והערך המוצג ב-HMI הוא זה הנדרש בתהליך הייצור. יש להחליף את החיישן בהקדם האפשרי.</value>
   </data>
   <data name="P_INFO_LEVEL_TEACH_1" xml:space="preserve">
-    <value>לחץ על דגל זה פעם אחת שהרמה הנכונה של החומר, כלומר זו שתואמת את הערך המצוין בפרמטר היחסי, נסרקת על ידי החיישן. זו הדרך ללמד את החיישן שזו הרמה המצוינת.</value>
+    <value>לחץ על דגל זה כאשר החיישן מזהה את רמת החומר הנכונה כפי שהוגדרה בפרמטר. זה מלמד את החיישן שהרמה הנוכחית היא רמת הייחוס.</value>
   </data>
   <data name="P_INFO_LEVEL_TEACH_2" xml:space="preserve">
-    <value>הגדר את הערך של הרמה המקסימלית התואמת את רמת החומר במכונה ולאחר מכן לחץ על "הגדר קנה מידה מלא" כדי להשיג מידה זו כערך של רמה מקסימלית. לדוגמה: הגדר 90% כאשר ההופר כמעט מלא, בערך ב-90% מהקיבולת שלו.</value>
+    <value>הזן את רמת החומר המקסימלית (למשל, 90% כאשר המיכל כמעט מלא) ולחץ על "הגדר קנה מידה מלא" כדי לשמור אותו כאסמכתא המקסימלית.</value>
   </data>
   <data name="P_INFO_LEVEL_TEACH_3" xml:space="preserve">
-    <value>הגדר את הערך של הרמה המינימלית התואמת לרמת החומר במכונה ולאחר מכן לחץ על "הגדר קנה מידה ריק" כדי להשיג מידה זו כערך של רמה מינימלית. לדוגמה: הגדר 10% כאשר ההופר כמעט ריק, בערך ב-10% מהקיבולת שלו.</value>
+    <value>הזן את רמת החומר המינימלית (למשל, 10% כאשר המיכל כמעט ריק) ולחץ על "הגדר קנה מידה ריק" כדי לשמור אותו כאסמכתא המינימלית.</value>
   </data>
   <data name="P_INFO_DIS_MODUL_MTR" xml:space="preserve">
-    <value>לחץ על דגל זה כדי לאפשר למנוע לפעול במהירות קבועה. אם הדגל הזה לא מוגדר, המנוע מונע על ידי ההיגיון של התהליך במהירות משתנה בזמן.</value>
+    <value>אפשר דגל זה להפעיל את המנוע במהירות קבועה. אם לא מופעל, מהירות המנוע תשתנה בהתאם ללוגיקה של התהליך.</value>
   </data>
   <data name="P_INFO_PAUSE_TIME_1" xml:space="preserve">
-    <value>הגדר כאן את הזמן שייחשב כהשהייה, או זמן השבתה, של הרכיב במצב עבודה המבוסס על רצף ON-OFF. אם הזמן הזה מוגדר לאפס, הרכיב שאליו מתייחס הפרמנטר הזה, לא יהיה יותר זמן השבתה עקב רצף ה-ON-OFF, מלבד מקרה אפילו זמן ON מוגדר לאפס.</value>
+    <value>ציין את משך הזמן הנחשב כזמן השבתה עבור רכיב הפועל במצב ON-OFF. אם מוגדר לאפס, לרכיב לא יהיה זמן הפסקה אלא אם כן זמן ההפעלה הוא אפסי.</value>
   </data>
   <data name="P_INFO_ON_TIME_1" xml:space="preserve">
-    <value>הגדר כאן את הזמן שייחשב כזמן הפעילות, או זמן הריצה, של הרכיב במצב עבודה המבוסס על רצף ON-OFF. אם הזמן הזה מוגדר לאפס, הרכיב שאליו מתייחס הפרמנטר הזה, לא יהיה יותר זמן פעילות, כלומר הוא יופסק במהלך רצף ההפעלה-כיבוי. הערה: אם זמן ההשהיה מוגדר לאפס, וזמן ההפעלה הוא מעל אפס, הרכיב מקבל פקודה להיות מופעל תמיד בתוך רצף ההפעלה-כיבוי.</value>
+    <value>ציין את הזמן הפעיל עבור רכיב במצב ON-OFF. אם מוגדר לאפס, הרכיב לא יפעל במהלך המחזור. הערה: אם זמן ההשהיה הוא אפס וזמן הפעלה מוגדר, הרכיב יישאר פועל ברציפות.</value>
   </data>
   <data name="P_INFO_DIS_MODUL_VLV" xml:space="preserve">
-    <value>לחץ על דגל זה כדי לאפשר לשסתום לפעול בהתייחסות קבועה. אם הדגל הזה לא מוגדר, השסתום מונע על ידי ההיגיון של התהליך בהתייחסות משתנה בזמן.</value>
+    <value>אפשר זאת כדי לשמור על השסתום בהתייחסות קבועה. אחרת, ההתייחסות תשתנה על סמך היגיון התהליך.</value>
   </data>
   <data name="P_INFO_PROP_GAIN" xml:space="preserve">
-    <value>רגולציה בתחום ההבדל בין ערך מוגדר למשוב. גבוה יותר הערך הזה, גבוה יותר התגובתיות של המערכת מעל הכל כשההבדל בין נקודת הגדר למשוב גדל. הערה: אם הרווח הזה גבוה מדי, הרגולציה עלולה להפוך לבלתי יציבה. אם היא נמוכה מדי, הרגולציה תהיה מאוד סבילה אבל פוטנציאלית לא מספיקה כדי לדחוף את הפלט מספיק כדי להגיע ליעד הרצוי.</value>
+    <value>פרמטר זה מגדיר את תגובת המערכת להפרש בין הערך שנקבע (setpoint) לבין המשוב בפועל. ערך גבוה יותר מגביר את תגובתיות המערכת, במיוחד כאשר הפער בין נקודת ההגדרה למשוב גדול.
+שימו לב, אם ההגבר מוגדר גבוה מדי, המערכת עלולה להפוך לבלתי יציבה. אם הרווח נמוך מדי, הרגולציה תהיה יציבה מאוד אך עשויה שלא להיות חזקה מספיק כדי להניע את הפלט ליעד הרצוי.</value>
   </data>
   <data name="P_INFO_INTGR_SMP_TIME" xml:space="preserve">
-    <value>ערך זה גבוה יותר, התגובתיות של המערכת איטית יותר. הזמן הזה הוא זה שמשמש את פרמטר הרווח האינטגרלי לעבוד איתו. דגימה אחת מוצלחת על ידי הבא ברציפות.</value>
+    <value>ככל שערך זה גבוה יותר, כך המערכת מגיבה לאט יותר. זמן זה מייצג את המרווח המשמש את פרמטר הרווח האינטגרלי. כל דגימה מלווה ברציפות את הדוגמה הבאה.</value>
   </data>
   <data name="P_INFO_INTGR_GAIN" xml:space="preserve">
-    <value>תחום רגולציה בזמן. גבוה יותר ערך זה, גבוה יותר התגובתיות של המערכת בכל פעם שפג זמן הדגימה האינטגרלית. הערה: אם הרווח הזה גבוה מדי, הרגולציה עלולה להיות לא מסוגלת להגיב לשינוי מהיר של משוב. אם זה נמוך מדי, הרגולציה תהיה יותר קלילה אבל פוטנציאלית לא מספיקה כדי לדחוף את הפלט מספיק כדי להגיע ליעד הרצוי. אם רווח זה מוגדר לאפס, לא מתבצעת תקנון בזמן.</value>
+    <value>ככל שערך זה גבוה יותר, כך המערכת מגיבה יותר בכל פעם שזמן הדגימה האינטגרלי יפוג.
+הערה: אם רווח זה גבוה מדי, ייתכן שהרגולציה לא תגיב ביעילות לשינויים מהירים במשוב. אם הוא נמוך מדי, הרגולציה תהיה מהירה יותר אבל אולי לא תהיה חזקה מספיק כדי להניע את הפלט ליעד הרצוי. אם רווח זה מוגדר לאפס, לא מתבצעת ויסות בתחום הזמן.</value>
   </data>
   <data name="P_INFO_ACT_PI_OUT" xml:space="preserve">
-    <value>פלט רגולציה בפועל שישמש כניפוי באגים או אבחון או כדי להעריך את הפרמטריזציה הנכונה של פרמטרי הרגולציה שיש להגדיר בהסתכלות על ההתנהגות הכוללת של המערכת.</value>
+    <value>מציג את פלט הרגולציה בפועל, שימושי לאבחון או התאמת פרמטרי ויסות.</value>
   </data>
   <data name="P_INFO_ANTICAV_1" xml:space="preserve">
-    <value>המשאבה מפחיתה באופן מחזורי את מהירותה לזמן קצר (למשל: -5% למשך 3 שניות) במטרה למנוע קוויטציה. פרמטר זה מייצג את הזמן שבין ירידה קצרה במהירות אחת לשנייה הבאה. אם הוא מוגדר לאפס, לא מבוצעת הורדת מהירות.</value>
+    <value>המשאבה מאטה לזמן קצר (לדוגמה, -5% למשך 3 שניות) כדי למנוע קוויטציה. זה קובע את הזמן בין האטות כאלה. אם אפס, התכונה מושבתת.</value>
   </data>
   <data name="P_INFO_ANTICAV_2" xml:space="preserve">
-    <value>המשאבה מורידה את מהירותה לערך של "מהירות נמוכה יותר עבור זרם מינימלי - נקודת קבע" למשך הזמן "מהירות נמוכה יותר עבור זרם מינימלי - משך זמן" על מנת לפתור את הקוויטציה בתהליך (אשר מזוהה על ידי הורדת הזרם מתחת לגבול שנקבע ב-HMI של "זרם מינימלי"). אם הליך האנטי-קוויטציה מצליח לקטוע את הקוויטציה, המשאבה חוזרת למהירות התהליך ללא כל אות גלובלי. אחרת, כאשר מהירות התהליך משוחזרת, נוצרת האזעקה "זרם מנוע מתחת למגבלת הטווח המינימלי - קיוויציה אפשרית". במקרה זה, המערכת לא תנסה לבצע ביטול אוטומטי של המשאבה שוב מאז הניסיון הראשון נכשל, אלא תפנה למפעיל לבדיקת הפרמטרים או לפעולות אחרות. אם משך הזמן מוגדר לאפס, לא מבוצע דה-קוויטציה במקרה של זרם מינימלי של משאבה.</value>
+    <value>כאשר מזוהה קוויטציה - מזוהה על ידי זרם המנוע שיורד מתחת לסף "זרם מינימלי" שנקבע ב-HMI - המשאבה תפחית אוטומטית את מהירותה לערך המצוין ב"מהירות נמוכה יותר עבור זרם מינימלי - נקודת קבע" ותשמור על מהירות מופחתת זו למשך הזמן המוגדר ב"מהירות נמוכה יותר עבור זרם מינימלי – משך זמן".
+אם הליך זה נגד קוויטציה פותר את הבעיה בהצלחה, המשאבה חוזרת למהירות התהליך הרגילה שלה מבלי להפעיל אזעקות או אותות גלובליים.
+עם זאת, אם הקוויטציה נמשכת וזרם המנוע נשאר מתחת לסף המינימלי לאחר שחזור המהירות, המערכת תיצור את האזעקה:
+"זרם מנוע מתחת למגבלת הטווח המינימלי - קיוויציה אפשרית."
+בשלב זה, לא יבוצעו ניסיונות דה-cavitation אוטומטיים נוספים. המערכת מסתמכת על התערבות מפעיל כדי לסקור את הפרמטרים או לנקוט בפעולות מתקנות.
+הערה: אם ה-Duration מוגדר לאפס, ההליך נגד קוויטציה יושבת ולא תינקט פעולה כאשר זרם המנוע יורד מתחת לסף המינימלי.</value>
   </data>
   <data name="P_INFO_MICROF_1" xml:space="preserve">
-    <value>בתחילת הייצור אפשר להפעיל "ניקוי מיוחד" שאמור להיות אינטנסיבי יותר מהאחרים הבאים על מנת להמיס כל שאריות מוצקות אפשריות ברשת הסינון. ניתן לקבוע את משך הזמן לפי פרמטר זה.</value>
+    <value>בתחילת הייצור ניתן להפעיל 'ניקוי מיוחד'. ניקוי זה אינטנסיבי יותר מהרגיל ועוזר להמס את כל שאריות המוצקות ברשת המסנן. ניתן להגדיר את משך הניקוי באמצעות פרמטר זה.</value>
   </data>
   <data name="P_INFO_MICROF_2" xml:space="preserve">
-    <value>בסיום הייצור (מחזור עצירה) ניתן להפחית את זמן ההשהיה בין ניקוי אחד למשנהו על מנת להעצים את השפעת המים על הרשת ולמנוע התמצקות של שאריות בזמן ההשבתה של הקו.</value>
+    <value>בסיום הייצור (במהלך מחזור העצירה), ניתן לקצר את זמן ההפסקה בין הניקוי. זה מעצים את השפעת המים על רשת המסנן ועוזר למנוע את התמצקות שאריות בזמן שהקו לא פעיל.</value>
   </data>
   <data name="P_INFO_MIN_LEV_BYPS" xml:space="preserve">
-    <value>לחץ על דגל זה כדי לבדוק את סיבוב המשאבה במקרה שאין רמה מינימלית. במקרה זה, המשאבה יורשה לפעול במשך כמה שניות ללא רמה מינימלית רק במטרה של בדיקת סיבוב. דגל זה מאופס אוטומטית ברגע שהמשאבה מתחילה לנוע.</value>
+    <value>לחץ על דגל זה כדי לבדוק את סיבוב המשאבה כאשר לא מזוהה רמת מינימום. במצב זה, המשאבה תפעל למשך מספר שניות אך ורק כדי לבדוק את סיבובה. הדגל מתאפס אוטומטית ברגע שהמשאבה מתחילה לנוע.</value>
   </data>
   <data name="P_INFO_MTR_NOM_AMP" xml:space="preserve">
-    <value>הגדר כאן את הזרם הנומינלי של המנוע. ניתן להשיג ערך זה על תווית המנוע (זו המצוינת במתח המנוע המתאים) על מנת לייצג את המידה המדויקת ביותר של הערך הנוכחי באחוזים בתצוגת HMI.</value>
+    <value>הגדר את הזרם הנומינלי של המנוע כאן. אתה יכול למצוא ערך זה על תווית המנוע (המתאים למתח המנוע הנכון). זה מבטיח שהאחוז הנוכחי המוצג ב-HMI מדויק ככל האפשר.</value>
   </data>
   <data name="P_INFO_SEMIAUTO_MODE" xml:space="preserve">
-    <value>חצי אוטומטי הוא המצב המשמש עבור רכיבים ספציפיים כדי לאפשר לבצע פעולות במהלך הייצור באותה דרך שבה ניתן לבצע אותן במצב תחזוקה כדרור ידני של כמה רכיבים נבחרים על ידי שימוש בפקודות HMI מבלי שמערכת תהליכים מנוהלת. אם מצב זה נבחר, ההפקה במעלה הזרם עשויה להיות מושעה.</value>
+    <value>מצב חצי אוטומטי משמש לרכיבים ספציפיים כדי לאפשר פעולות מסוימות במהלך הייצור, בדומה לאופן שבו הן נעשות במצב תחזוקה. זה מאפשר לך לשלוט באופן ידני על רכיבים נבחרים באמצעות פקודות HMI ללא כל נעילות תהליך.
+הערה: אם מצב זה מופעל, הייצור במעלה הזרם עשוי להיות מושעה.</value>
   </data>
   <data name="P_INFO_BYPASS_GT_VLVs" xml:space="preserve">
-    <value>אם נבחרה אפשרות מאובטחת, המערכת תאפשר פתיחת שסתומים עליונים ותחתונים בו-זמנית. אחרת, אם נבחרה אפשרות ביטול נעילה, הדבר מותר וניתן לעשות זאת רק במצב תחזוקה על ידי שימוש בפקודות HMI.</value>
+    <value>אם נבחרה האפשרות Secure, המערכת מונעת את פתיחת השסתומים העליונים והתחתונים בו-זמנית. אם נבחרה האפשרות Unlocked, פתיחת שני השסתומים בו זמנית מותרת - אך רק במצב תחזוקה באמצעות פקודות HMI.</value>
   </data>
   <data name="P_MATER_FLOAT_CTRL" xml:space="preserve">
-    <value>זמן מקסימלי ללא כל לחץ מעל מגבלת המינימום שנקבעה בלוח של לחץ הרוטור. אם הזמן הזה יפוג, הרוטור ינסה לתפוס עוד חומר משנה את הכיוון שלו מכיוון שהחומר הוא כנראה קפוא בתוך ההופר. הגדר את הפרמטר הזה לאפס כדי להשבית את הפקד הזה.</value>
+    <value>זהו הזמן המרבי המותר מבלי שלחץ הרוטור חורג מהמגבלה המינימלית שנקבעה בלוח. אם הזמן הזה יגמר, הרוטור ינסה לתפוס עוד חומר על ידי שינוי כיוון, מכיוון שהחומר צפוי לצוף בתוך הופר. הגדר פרמטר זה לאפס כדי להשבית את הפקד הזה.</value>
   </data>
   <data name="P_ROT_DIR_CHG_TIME" xml:space="preserve">
-    <value>הרוטור יכול לשנות את הכיוון שלו לפי זמן. הזן כאן את מרווח הזמן המשמש כדי להפוך את כיוון הרוטור. שים לב שהאיטרוול הפעם מאופס בכל שינוי כיוון גם אם היפוך זה נובע מסיבות אחרות. אם פרמטר זה מוגדר לאפס פונקציה זו נשארת מושבתת.</value>
+    <value>הרוטור יכול להפוך את הכיוון שלו על סמך מרווח זמן. הזן את מרווח הזמן המשמש להפעלת היפוך זה. שימו לב שהטיימר מתאפס בכל פעם שהכיוון משתנה, גם אם ההיפוך קורה מסיבות אחרות. הגדרת פרמטר זה לאפס משביתה פונקציה זו.</value>
   </data>
   <data name="P_ROT_RST_MODE" xml:space="preserve">
-    <value>גם אם נבחר מצב מסוים לסנכרון סיבוב הרוטורים, יכול לקרות שאחד מהרוטורים ישנה את הכיוון שלו עקב הלחץ המרבי (לדוגמה). במקרה זה, הסנכרון בין הרוטורים אינו זהה עוד למבוקש. פרמטר זה משמש כדי להבטיח שאובדן סנכרון הרוטורים אינו ארוך מהזמן שנקבע כאן. אם פונקציה זו אינה מתבקשת ואין צורך בסנכרון בין הרוטורים, ניתן לבחור במצב סיבוב "חופשי" בתפריט הבחירה המתאים.</value>
+    <value>גם כאשר נבחר מצב לסנכרון סיבוב הרוטורים, רוטור אחד עשוי לשנות כיוון מסיבות כמו הגעה ללחץ מרבי. במקרה זה, הרוטורים אינם מסונכרנים עוד כמתוכנן במקור. פרמטר זה מגדיר את הזמן המרבי המותר עבור הרוטורים להחזיר את הסנכרון. אם אין צורך בסנכרון, אתה יכול לבחור במצב סיבוב 'חינם' בתפריט המתאים.</value>
   </data>
   <data name="P_ROT_MODE" xml:space="preserve">
-    <value>ניתן לבחור שלושה מצבי סיבוב של הרוטורים: 1) חינם הוא המצב המאפשר לכל רוטור להיות עצמאי לחלוטין מהאחר (ללא סנכרון). 2) בשלב זה המצב שמבטיח את אותו כיוון הסיבוב של הרוטורים. שים לב שבמצב זה הכיוון האחרון של הרוטור 1 משמש כאסמכתא עבור שניהם. 3) בפנים נמצא המצב שמסנכרן את הרוטורים במטרה להעביר ולשמור את החומר בין הרוטורים. 4) בחוץ הוא המצב שמסנכרן את הרוטורים במטרה להעביר ולשמור את החומר בצד החיצוני של הרוטורים, בסמוך לקירות ההופר הצדדיים.</value>
+    <value>ישנם ארבעה מצבי סיבוב זמינים עבור הרוטורים:
+1. חינם: כל רוטור פועל באופן עצמאי לחלוטין, ללא סנכרון.
+2. בשלב: שני הרוטורים מסתובבים באותו כיוון. הכיוון האחרון של רוטור 1 משמש כאסמכתא עבור שניהם.
+3. בפנים: הרוטורים מסונכרנים כדי להעביר ולהחזיק חומר ביניהם.
+4. מבחוץ: הרוטורים מסונכרנים כדי להעביר ולהחזיק חומר לאורך הצדדים החיצוניים, בסמוך לדפנות ההופר הצדדיים.</value>
   </data>
   <data name="P_ENAB_EXT_SP_REF" xml:space="preserve">
-    <value>בחירה זו משפיעה על נקודת קביעת המהירות המוגדרת בתפריט HMI ומאפשרת להניע את המנוע עם התייחסות מהירות חיצונית</value>
+    <value>בחירה זו משביתה את נקודת קביעת המהירות בתפריט HMI ומאפשרת לשלוט במנוע באמצעות התייחסות מהירות חיצונית.</value>
   </data>
   <data name="P_CORRECTION_FACTOR" xml:space="preserve">
-    <value>השתמש בפרמטר זה כדי להתאים את אות המדידה או הפניה בשני הצדדים, העליון והתחתון. הגדר ערכים פחות מ-100 כדי לתקן את ההפניה למדוד כלפי מטה וערכים יותר מ-100 כדי לתקן אותו כלפי מעלה. ערך 100 פירושו ללא תיקון.</value>
+    <value>השתמש בפרמטר זה כדי להתאים את אות המדידה או ההתייחסות הן עבור הצד העליון והן התחתון. הגדר ערכים מתחת ל-100 כדי להפחית את מדידת הייחוס, וערכים מעל 100 כדי להגדיל אותה. ערך של 100 אומר שאין תיקון.</value>
   </data>
   <data name="P_EVAC_TIME" xml:space="preserve">
-    <value>הגדר עיכוב זה בהתבסס על הזמן שלוקח למערכת לבצע את התהליך ולהעביר את כל החומר כדי לשנות את נתיב החומר ללא סיכון שניתן לערבב סוגי חומרים שונים. הגדר לאפס פרמטר זה אם אין סיכון למפעל זה.</value>
+    <value>הגדר עיכוב זה בהתבסס על הזמן שהמערכת צריכה להשלים את התהליך ולהוביל את כל החומר. זה מבטיח שניתן להחליף נתיבי חומרים ללא סיכון של ערבוב סוגי חומרים שונים. הגדר פרמטר זה לאפס אם אין סיכון לזיהום צולב במערכת.</value>
   </data>
   <data name="P_INV_MAX_FREQ" xml:space="preserve">
-    <value>הגדר כאן את התדר המקסימלי שאליו מותר למנוע להגיע, שנקבע בפרמטרי הכונן. זה משמש כדי להתאים את התצוגה של התדר בפועל ב-PreVu HMI לזה שמוצג בלוח המהפך.</value>
+    <value>הגדר את התדר המקסימלי שאליו מותר למנוע להגיע, כפי שהוגדר בפרמטרי הכונן. זה מבטיח שהתדר המוצג ב-PreVu HMI מתאים לערך המוצג בלוח המהפך.</value>
   </data>
   <data name="P_SENS_FULL_SCALE" xml:space="preserve">
-    <value>הגדר כאן את ערך המידה שמתאים לפלט האות המרבי של החיישן (20 mA)</value>
+    <value>הגדר את ערך המדידה המתאים לאות הפלט המקסימלי של החיישן (20 mA).</value>
   </data>
   <data name="P_INFO_RES_NOM_AMP" xml:space="preserve">
-    <value>הגדר כאן את הזרם הנומינלי של הנגד כדי לאפשר את התצוגה של ערך האחוז הנוכחי בתצוגת HMI.</value>
+    <value>הגדר את הזרם הנומינלי של הנגד כאן כדי לאפשר הצגה מדויקת של ערך האחוז הנוכחי ב-HMI.</value>
   </data>
   <data name="P_PULSE_VALUE_WATER" xml:space="preserve">
-    <value>זוהי כמות המים המקבילה לדופק אחד של אות שיוצא מהחיישן. לדוגמה, אם ערך זה מוגדר ל-10 ליטר, ספירת 3 הפולסים פירושה הצטברות של 30 ליטר.</value>
+    <value>זוהי כמות המים המתאימה לפולס אחד מהחיישן. לדוגמה, אם ערך זה מוגדר ל-10 ליטר, קבלת 3 פולסים פירושה שנמדדו סך של 30 ליטר.</value>
   </data>
   <data name="P_TANK_LEVEL_OVERFLOW" xml:space="preserve">
-    <value>יש להגדיר ערך זה במדידת המרחק בין חיישן המפלס לשולי הזרימה של המיכל. בדרך זו, PreVu HMI יכול להראות רמה של 100% ברגע שהנוזל מגיע לקצה הגלישה של המיכל.</value>
+    <value>יש להגדיר ערך זה על ידי מדידת המרחק בין חיישן המפלס לקצה הגלישה של המיכל. זה מאפשר ל-PreVu HMI להציג רמה של 100% כאשר הנוזל מגיע לנקודת הגלישה.</value>
   </data>
   <data name="P_TANK_DIAMETER" xml:space="preserve">
-    <value>ערך זה משמש להערכת נפח הנוזל שנמצא בתוך המיכל ולחישוב, זמן אחר זמן, תנודות נפח. יותר וול זה מדויק, יותר מדידות נפח נוזלים יהיו מדויקות גם כן.</value>
+    <value>ערך זה משמש להערכת נפח הנוזל בתוך המיכל ולחישוב תנודות נפח לאורך זמן. ככל שערך זה מדויק יותר, מדידות נפח הנוזל יהיו מדויקות יותר.</value>
   </data>
   <data name="P_ENAB_HI_REST_SP" xml:space="preserve">
-    <value>מהירות הפעלה מחדש גבוהה יכולה לשמש בכמה תנאים של התהליך, מעל לכל כדי למנוע את הסיכון של הצטברות פסולת שעלולה לחסום את המשאבה. המפעיל יכול להפעיל או לבטל פונקציה זו בהתאם להערכת הצורך שלו.</value>
+    <value>ניתן להשתמש במהירות הפעלה מחדש גבוהה בתנאי תהליך שונים, בעיקר כדי למנוע את הסיכון של הצטברות פסולת שעלולה לחסום את המשאבה. המפעיל יכול להפעיל או להשבית פונקציה זו על סמך הערכת הצורך שלו.</value>
   </data>
   <data name="P_HI_REST_SP_VAL" xml:space="preserve">
-    <value>אם מהירות הפעלה מחדש גבוהה מופעלת, זהו הערך של המהירות העליונה שאליה מגיעה המשאבה בהפעלה מחדש.</value>
+    <value>אם מופעלת מהירות הפעלה מחדש גבוהה, זוהי המהירות המרבית אליה מגיעה המשאבה במהלך ההפעלה מחדש.</value>
   </data>
   <data name="P_HI_REST_SP_TIME" xml:space="preserve">
-    <value>אם מהירות הפעלה מחדש גבוהה מופעלת, זהו משך המהירות העליונה שאליה מגיעה המשאבה בהפעלה מחדש.</value>
+    <value>אם מופעלת מהירות הפעלה מחדש גבוהה, זהו משך הזמן שבו המשאבה פועלת במהירות המרבית שלה במהלך ההפעלה מחדש.</value>
   </data>
   <data name="INFO_COOL_3" xml:space="preserve">
     <value>הפעל את משאבת הקירור כדי לאפשר למכשיר הקשור לה לפעול ברציפות</value>
