--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -10423,121 +10423,133 @@
     <value>排放阀失去了其相互位置安全联锁装置。操作员现在可以在维护模式下同时打开它们</value>
   </data>
   <data name="P_INFO_DISAB_SENS" xml:space="preserve">
-    <value>传感器故障时可临时使用。当传感器被禁用时，其读数被屏蔽，HMI 上显示的值是过程生产所需的值。需要尽快更换传感器。</value>
+    <value>它可以在传感器故障时临时使用。当传感器禁用时，其读数将被屏蔽，HMI 上显示的数值才是生产流程所需的数值。必须尽快更换传感器。</value>
   </data>
   <data name="P_INFO_LEVEL_TEACH_1" xml:space="preserve">
-    <value>一旦传感器扫描到正确的材料层（即与相对参数中指示的值相对应的材料层），请单击此标志。这是教导传感器这是指示的液位的方法。</value>
+    <value>当传感器检测到参数中定义的正确料位时，点击此标志。这将使传感器将当前料位设置为参考料位。</value>
   </data>
   <data name="P_INFO_LEVEL_TEACH_2" xml:space="preserve">
-    <value>设置与机器中物料水平相对应的最大水平值，然后单击“设置满刻度”以获取该测量值作为最大水平值。例如：当料斗几乎满时（大约是其容量的 90%），设置为 90%。</value>
+    <value>输入最大料​​位（例如，料斗接近满时为 90%），然后单击“设置满量程”将其保存为最大参考。</value>
   </data>
   <data name="P_INFO_LEVEL_TEACH_3" xml:space="preserve">
-    <value>设置与机器中料位相对应的最小料位值，然后单击“设置空秤”以获取该测量值作为最小料位值。例如：当料斗几乎为空时，设置为 10%，约为其容量的 10%。</value>
+    <value>输入最低料位（例如，料斗接近空时为 10%），然后单击“设置空料秤”将其保存为最低参考。</value>
   </data>
   <data name="P_INFO_DIS_MODUL_MTR" xml:space="preserve">
-    <value>单击此标志可使电机匀速运行。如果未设置该标志，则电机由过程逻辑以变速及时驱动。</value>
+    <value>启用此标志可使电机以恒定速度运行。如果未启用，电机速度将根据流程逻辑变化。</value>
   </data>
   <data name="P_INFO_PAUSE_TIME_1" xml:space="preserve">
-    <value>此处设置的时间被视为组件在基于开关序列的工作模式下的暂停或停机时间。如果该时间设置为零，则该参数所涉及的组件将不会再因开关顺序而导致停机，除非即使打开时间设置为零的情况。</value>
+    <value>指定组件在开关模式下运行时被视为停机的时长。如果设置为零，则组件将没有暂停时间，除非开启时间也为零。</value>
   </data>
   <data name="P_INFO_ON_TIME_1" xml:space="preserve">
-    <value>此处设置的时间被视为组件在基于开关序列的工作模式下的活动时间或运行时间。如果该时间设置为零，则该参数所涉及的组件将不再有活动时间，这意味着它将在开关序列期间停止。注意：如果暂停时间设置为零，并且开启时间大于零，则命令组件在开关序列内始终开启。</value>
+    <value>指定组件在开关模式下的激活时间。如果设置为零，则组件在循环期间不会运行。注意：如果暂停时间为零，并且设置了开启时间，则组件将持续保持开启状态。</value>
   </data>
   <data name="P_INFO_DIS_MODUL_VLV" xml:space="preserve">
-    <value>单击此标志可以让阀门以恒定参考值运行。如果未设置该标志，则阀门由时间可变参考处的过程逻辑驱动。</value>
+    <value>启用此选项可使阀门保持恒定的参考值。否则，参考值将根据过程逻辑而变化。</value>
   </data>
   <data name="P_INFO_PROP_GAIN" xml:space="preserve">
-    <value>调节设定值和反馈之间的差异。当设定值和反馈之间的差异增大时，该值越高，系统的反应性越高。注意：如果增益太高，调节可能会变得不稳定。如果太低，调节将非常稳定，但可能不足以推动输出达到所需目标。</value>
+    <value>此参数定义系统对设定值（设定点）与实际反馈之间差异的响应能力。较高的值会提高系统的反应能力，尤其是在设定点与反馈之间的差距较大的情况下。
+请注意，如果增益设置过高，系统可能会变得不稳定。如果增益过低，调节虽然非常稳定，但可能不足以将输出驱动到所需的目标值。</value>
   </data>
   <data name="P_INFO_INTGR_SMP_TIME" xml:space="preserve">
-    <value>该值越高，系统的反应速度越慢。这次是积分增益参数使用的一次。一个样本不断地被下一个样本取代。</value>
+    <value>此值越高，系统响应越慢。此时间表示积分增益参数使用的间隔。每个采样都连续跟随下一个采样。</value>
   </data>
   <data name="P_INFO_INTGR_GAIN" xml:space="preserve">
-    <value>时域调节。该值越高，当积分采样时间到期时系统的反应性越高。注意：如果增益太高，调节可能无法响应反馈的快速变化。如果太低，监管将会更加迅速，但可能不足以推动产出达到预期目标。如果该增益设置为零，则不执行时域调节。</value>
+    <value>此值越高，每次积分采样时间结束时系统的响应速度就越快。
+注意：如果此增益过高​​，调节可能无法有效响应反馈的快速变化。如果此增益过低，调节速度虽然更快，但可能不足以驱动输出达到所需的目标值。如果此增益设置为零，则不执行时域调节。</value>
   </data>
   <data name="P_INFO_ACT_PI_OUT" xml:space="preserve">
-    <value>实际调节输出可用作调试或诊断，或评估必须设置的调节参数的正确参数化，以查看系统的整体行为。</value>
+    <value>显示实际调节输出，有助于诊断或调整调节参数。</value>
   </data>
   <data name="P_INFO_ANTICAV_1" xml:space="preserve">
-    <value>泵会在短时间内周期性地降低速度（例如：-5%，持续 3 秒），目的是防止气蚀。该参数表示一次速度短暂下降与下一次速度短暂下降之间的时间。如果设置为零，则不执行减速。</value>
+    <value>泵会短暂减速（例如，-5%，持续 3 秒），以防止气蚀。此参数设置了两次减速之间的时间间隔。如果设置为零，则该功能被禁用。</value>
   </data>
   <data name="P_INFO_ANTICAV_2" xml:space="preserve">
-    <value>泵将其速度降低至“最小电流的较低速度 - 设定点”的值，持续时间为“最小电流的较低速度 - 持续时间”，以解决正在进行的气蚀问题（通过电流降低到低于 HMI 中设置的“最小电流”限值来识别）。如果防气蚀程序成功中断气蚀，则泵将返回到过程速度，而无需任何全局信号。否则，当过程速度恢复时，将生成警报“电机电流低于最小范围限制 - 可能出现气蚀”。在这种情况下，由于第一次尝试失败，系统不会再次尝试自动对泵进行去气蚀，而是会请操作员检查参数或采取其他操作。如果持续时间设置为零，则在泵最小电流的情况下不执行去气蚀。</value>
+    <value>当检测到气蚀时（电机电流低于人机界面 (HMI) 中设置的“最小电流”阈值），泵将自动将转速降至“降低转速以达到最小电流 - 设定值”中指定的值，并在“降低转速以达到最小电流 - 持续时间”中定义的持续时间内保持该降低的转速。
+如果此防气蚀程序成功解决问题，泵将恢复正常过程转速，而不会触发任何警报或全局信号。
+但是，如果气蚀持续存在，且在恢复转速后电机电流仍低于最小阈值，系统将发出警报：
+“电机电流低于最小范围限值 - 可能存在气蚀”。
+此时，系统将不再进行自动防气蚀尝试。系统依靠操作员干预来检查参数或采取纠正措施。
+注意：如果将持续时间设置为零，则防气蚀程序将被禁用，并且当电机电流低于最小阈值时不会采取任何措施。</value>
   </data>
   <data name="P_INFO_MICROF_1" xml:space="preserve">
-    <value>在生产开始时，可​​以启动“特殊清洁”，该清洁应比接下来的其他清洁更深入，以熔化过滤网上任何可能的固化残留物。其持续时间可以通过该参数设置。</value>
+    <value>生产开始时，可​​以激活“特殊清洁”功能。此清洁功能比常规清洁功能更彻底，有助于溶解滤网上的任何固化残留物。此清洁的持续时间可使用此参数设置。</value>
   </data>
   <data name="P_INFO_MICROF_2" xml:space="preserve">
-    <value>在生产结束时（停止周期），可以减少一次清洗与下一次清洗之间的暂停时间，以加强水对网的作用并防止生产线停机期间残留物凝固。</value>
+    <value>在生产结束时（停机周期），可以缩短两次清洁之间的暂停时间。这可以增强水对过滤网的清洁效果，并有助于防止残留物在生产线停机时凝固。</value>
   </data>
   <data name="P_INFO_MIN_LEV_BYPS" xml:space="preserve">
-    <value>单击此标志可在不存在最低液位的情况下测试泵的旋转情况。在这种情况下，泵将被允许运行几秒钟，而没有最低液位，仅用于旋转检查。一旦泵开始移动，该标志就会自动重置。</value>
+    <value>当未检测到最低液位时，点击此标记可测试泵的旋转。在此模式下，泵将运行几秒钟以检查其旋转情况。泵开始运转后，此标记将自动重置。</value>
   </data>
   <data name="P_INFO_MTR_NOM_AMP" xml:space="preserve">
-    <value>在此处设置电机的额定电流。该值可在电机标签（在正确的电机电压下显示的标签）上获取，以便在 HMI 视图中显示最精确的电流百分比值。</value>
+    <value>在此处设置电机的额定电流。您可以在电机标签上找到此值（对应正确的电机电压）。这可以确保 HMI 上显示的电流百分比尽可能准确。</value>
   </data>
   <data name="P_INFO_SEMIAUTO_MODE" xml:space="preserve">
-    <value>半自动模式适用于特定组件，允许在生产过程中以与维护模式相同的方式执行操作，即使用 HMI 命令手动操作某些选定组件，无需任何流程联锁管理。如果选择此模式，上游生产可能会暂停。</value>
+    <value>半自动模式适用于特定组件，允许在生产过程中执行某些操作，类似于维护模式下的操作。该模式允许您通过 HMI 命令手动控制选定的组件，无需任何流程互锁。
+注意：如果激活此模式，上游生产可能会暂停。</value>
   </data>
   <data name="P_INFO_BYPASS_GT_VLVs" xml:space="preserve">
-    <value>如果选择“安全”选项，系统将无法同时打开上部和下部阀门。否则，如果选择“解锁”选项，则允许同时打开上部和下部阀门，并且只能在维护模式下使用 HMI 命令执行此操作。</value>
+    <value>如果选择“安全”选项，系统将阻止上下阀门同时打开。如果选择“解锁”选项，则允许同时打开两个阀门——但只能在维护模式下使用 HMI 命令打开。</value>
   </data>
   <data name="P_MATER_FLOAT_CTRL" xml:space="preserve">
-    <value>转子压力面板中设置的最低压力下限的最大持续时间。如果超过此时间，转子将尝试改变方向以捕获更多物料，因为物料可能漂浮在料斗内。将此参数设置为零可禁用此控制。</value>
+    <value>这是允许转子压力不超过面板上设置的最小限值的最大时间。如果超过此时间，转子将尝试通过改变方向来捕获更多物料，因为物料可能漂浮在料斗内。将此参数设置为零可禁用此控制。</value>
   </data>
   <data name="P_ROT_DIR_CHG_TIME" xml:space="preserve">
-    <value>转子可以根据时间改变方向。在此输入用于反转转子方向的时间间隔。请注意，即使由于其他原因导致方向反转，此时间间隔在每次方向改变时都会重置。如果此参数设置为零，则此功能将保持禁用状态。</value>
+    <value>转子可以根据时间间隔反转方向。请输入触发此反转的时间间隔。请注意，每次方向改变时，计时器都会重置，即使反转是因其他原因引起的。将此参数设置为零将禁用此功能。</value>
   </data>
   <data name="P_ROT_RST_MODE" xml:space="preserve">
-    <value>即使选择了某种模式来同步转子旋转，也可能会发生转子由于最大压力（例如）而改变方向的情况。在这种情况下，转子之间的同步不再与要求的同步一致。此参数用于确保转子失步时间不超过此处设置的时间。如果未请求此功能，并且转子之间无需同步，则可以在相应的选择菜单中选择“自由”旋转模式。</value>
+    <value>即使选择了同步转子旋转的模式，一个转子也可能由于达到最大压力等原因而改变方向。在这种情况下，转子不再按原计划同步。此参数设置转子恢复同步的最大允许时间。如果不需要同步，您可以在相应的菜单中选择“自由”旋转模式。</value>
   </data>
   <data name="P_ROT_MODE" xml:space="preserve">
-    <value>转子有三种旋转模式可供选择：1) 自由模式，即每个转子完全独立于另一个转子（无同步）。2) 同相模式，即确保转子旋转方向相同。请注意，在此模式下，转子 1 的最后一个方向将用作两者的参考。3) 内部模式，即使转子同步，目的是将材料输送并保持在转子之间。4) 外部模式，即使转子同步，目的是将材料输送并保持在转子外侧，靠近料斗侧壁。</value>
+    <value>转子有四种旋转模式：
+1. 自由：每个转子完全独立运行，不同步。
+2. 同相：两个转子同向旋转。转子1的最后一个旋转方向作为两者的参考方向。
+3. 内侧：两个转子同步旋转，在转子之间输送和保持物料。
+4. 外侧：两个转子同步旋转，沿外侧靠近料斗侧壁输送和保持物料。</value>
   </data>
   <data name="P_ENAB_EXT_SP_REF" xml:space="preserve">
-    <value>此选项禁用 HMI 菜单中设置的速度设定点，并允许使用外部速度参考驱动电机</value>
+    <value>该选择将禁用 HMI 菜单中的速度设定点，并允许使用外部速度参考来控制电机。</value>
   </data>
   <data name="P_CORRECTION_FACTOR" xml:space="preserve">
-    <value>使用此参数可调整上下两侧的测量值或参考信号。设置小于 100 的值可向下校正参考测量值，设置大于 100 的值可向上校正参考测量值。值 100 表示不校正。</value>
+    <value>使用此参数调整上侧和下侧的测量值或参考信号。设置低于 100 的值可降低参考测量值，高于 100 的值可增加参考测量值。值为 100 表示无校正。</value>
   </data>
   <data name="P_EVAC_TIME" xml:space="preserve">
-    <value>根据系统完成流程和运输所有物料所需的时间设置此延迟，以便更改物料路径，避免不同物料类型混合的风险。如果该工厂未发生任何风险，则将此参数设置为零。</value>
+    <value>根据系统完成流程并输送所有物料所需的时间设置此延迟。这可确保切换物料路径时不会出现不同物料类型混合的风险。如果系统不存在交叉污染风险，请将此参数设置为零。</value>
   </data>
   <data name="P_INV_MAX_FREQ" xml:space="preserve">
-    <value>此处设置电机允许达到的最大频率，该频率在驱动器参数中设置。这用于将 PreVu HMI 上的实际频率视图与逆变器面板上显示的频率视图进行匹配。</value>
+    <value>根据驱动器参数中的定义，设置电机允许达到的最大频率。这确保 PreVu HMI 上显示的频率与逆变器面板上显示的值一致。</value>
   </data>
   <data name="P_SENS_FULL_SCALE" xml:space="preserve">
-    <value>在此设置与传感器最大信号输出 (20 mA) 对应的测量值</value>
+    <value>设置与传感器最大输出信号（20 mA）相对应的测量值。</value>
   </data>
   <data name="P_INFO_RES_NOM_AMP" xml:space="preserve">
-    <value>在此处设置电阻器的标称电流，以便在 HMI 视图中查看电流百分比值。</value>
+    <value>在此处设置电阻器的标称电流，以便在 HMI 上准确显示电流百分比值。</value>
   </data>
   <data name="P_PULSE_VALUE_WATER" xml:space="preserve">
-    <value>这是传感器发出一个信号脉冲对应的水量。例如，如果此值设置为 10 升，则 3 个脉冲计数表示累计 30 升。</value>
+    <value>这是传感器一次脉冲对应的水量。例如，如果此值设置为 10 升，则接收到 3 个脉冲意味着总共测量了 30 升。</value>
   </data>
   <data name="P_TANK_LEVEL_OVERFLOW" xml:space="preserve">
-    <value>此值必须通过测量液位传感器与储罐溢流边缘之间的距离来设置。这样，一旦液体到达储罐溢流边缘，PreVu HMI 便可显示 100% 液位。</value>
+    <value>该值应通过测量液位传感器与储罐溢流边缘之间的距离来设置。这样，当液体到达溢流点时，PreVu HMI 就能显示 100% 液位。</value>
   </data>
   <data name="P_TANK_DIAMETER" xml:space="preserve">
-    <value>该值用于估算罐内液体的体积，并计算体积随时间的变化。该值越准确，液体体积测量结果也越准确。</value>
+    <value>该值用于估算罐内液体的体积，并计算体积随时间的变化。该值越准确，液体体积测量就越准确。</value>
   </data>
   <data name="P_ENAB_HI_REST_SP" xml:space="preserve">
-    <value>高重启速度可用于多种工艺条件，尤其适用于防止废物堆积堵塞泵的风险。操作员可根据自身需求启用或禁用此功能。</value>
+    <value>高重启速度适用于各种工艺条件，主要是为了防止废物堆积导致泵堵塞的风险。操作员可以根据自身需求启用或禁用此功能。</value>
   </data>
   <data name="P_HI_REST_SP_VAL" xml:space="preserve">
-    <value>如果启用了高重启速度，这是泵在重启时达到的最高速度的值。</value>
+    <value>如果启用高重启速度，这是泵在重启期间达到的最大速度。</value>
   </data>
   <data name="P_HI_REST_SP_TIME" xml:space="preserve">
-    <value>如果启用了高重启速度，这是泵在重启时达到的最高速度的持续时间。</value>
+    <value>如果启用了高重启速度，这是重启期间泵以其最大速度运行的持续时间。</value>
   </data>
   <data name="INFO_COOL_3" xml:space="preserve">
     <value>开启冷却泵，使其相关设备持续运行</value>
   </data>
   <data name="INFO_SYS_36" xml:space="preserve">
-    <value>PLC安全输入卡硬件故障。请确保现场无短路，或与该PLC输入连接的电路连接不良。请检查安全PLC输入模块，重置警报并/或重启PLC模块。</value>
+    <value>PLC安全输入卡硬件故障。请确保现场无短路，或与该PLC输入连接的电路连接不良。请检查安全PLC输入模块，重置警报并/或重启PLC模块</value>
   </data>
   <data name="INFO_SYS_37" xml:space="preserve">
-    <value>PLC安全输出卡硬件故障。请确保现场无短路，或与该PLC输出连接的电路连接不良。检查安全PLC输出模块，重置警报并/或重启PLC模块。</value>
+    <value>PLC安全输出卡硬件故障。请确保现场无短路，或与该PLC输出连接的电路连接不良。检查安全PLC输出模块，重置警报并/或重启PLC模块</value>
   </data>
   <data name="INFO_SYS_38" xml:space="preserve">
     <value>即使设备已关闭，仍至少有一个输出接触器处于闭合状态！请检查两个接触器以及驱动接触器的PLC接口继电器。</value>
@@ -10555,7 +10567,7 @@
     <value>检查逆变器状态和警报是否存在，因为其安全扭矩关闭功能未响应 PLC 命令。重启驱动器以重置最终的 PROFIsafe 卡钝化。仅限授权人员操作！</value>
   </data>
   <data name="INFO_AMP_14" xml:space="preserve">
-    <value>电流过大导致停机次数过多！请检查进料量、出料困难情况以及电流参数设置。</value>
+    <value>电流过大导致停机次数过多！请检查进料量、出料困难情况以及电流参数设置</value>
   </data>
   <data name="INFO_EXT_SIG" xml:space="preserve">
     <value>检查外部模拟传感器、其在现场的接线以及其在电气柜中的信号反馈</value>
