--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -442,7 +442,7 @@
     <value>Grafico</value>
   </data>
   <data name="OFF" xml:space="preserve">
-    <value>Spento</value>
+    <value>OFF</value>
   </data>
   <data name="ON" xml:space="preserve">
     <value>ON</value>
@@ -3682,16 +3682,16 @@
     <value>Vasca acqua - scarico a 225</value>
   </data>
   <data name="DRYER - RESISTOR 1" xml:space="preserve">
-    <value>Essiccatore - resistenza 1</value>
+    <value>Essicatore - resistenza 1</value>
   </data>
   <data name="DRYER - RESISTOR 2" xml:space="preserve">
-    <value>Essiccatore - resistenza 2</value>
+    <value>Essicatore - resistenza 2</value>
   </data>
   <data name="DRYER - RESISTOR 3" xml:space="preserve">
-    <value>Essiccatore - resistenza 3</value>
+    <value>Essicatore - resistenza 3</value>
   </data>
   <data name="DRYER - AIR TEMPERATURE" xml:space="preserve">
-    <value>Essiccatore - temperatura dell'aria</value>
+    <value>Essicatore - temperatura dell'aria</value>
   </data>
   <data name="SILO MIXER - WEIGHT" xml:space="preserve">
     <value>Silo Miscelatore - peso</value>
@@ -5794,7 +5794,7 @@
     <value>DCE - Ventilatore a centrifuga per aspirazione</value>
   </data>
   <data name="DRYER - RESISTOR" xml:space="preserve">
-    <value>Essiccatore - Resistore</value>
+    <value>Essicatore - Resistore</value>
   </data>
   <data name="CENTRIFUGE SAFETY KEY EXTRACTED FORM THE LOCK" xml:space="preserve">
     <value>Chiave di sicurezza della centrifuga estratta dal blocco</value>
@@ -5827,7 +5827,7 @@
     <value>Bypass dell'interblocco Sistema di ingrassaggio OK per materiale</value>
   </data>
   <data name="DRYER - MARERIAL INTERCEPTION VALVE" xml:space="preserve">
-    <value>Essiccatore - valvola di intercettazione materiale</value>
+    <value>Essicatore - valvola di intercettazione materiale</value>
   </data>
   <data name="DRYER DETAIL" xml:space="preserve">
     <value>Dettaglio essicatore</value>
@@ -5863,7 +5863,7 @@
     <value>Temperatura minima non ok</value>
   </data>
   <data name="DRYER TEMPERATURE" xml:space="preserve">
-    <value>Temperatura dell'essiccatore</value>
+    <value>Temperatura dell'essicatore</value>
   </data>
   <data name="MINIMUM TEMPERATURE OK TO STOP" xml:space="preserve">
     <value>Temperatura minima ok per la fermata</value>
@@ -7540,13 +7540,13 @@
     <value>Pompa di ricircolo ai reattori</value>
   </data>
   <data name="FLUID DRYER" xml:space="preserve">
-    <value>Essiccatore fluido</value>
+    <value>Essicatore fluido</value>
   </data>
   <data name="DRYER RESISTOR" xml:space="preserve">
     <value>Resistore dell'essicatore</value>
   </data>
   <data name="DRYER" xml:space="preserve">
-    <value>Essiccatore</value>
+    <value>Essicatore</value>
   </data>
   <data name="DRYER ASPIRATION" xml:space="preserve">
     <value>Aspirazione essicatore</value>
@@ -10222,7 +10222,7 @@
     <value>Serbatoio dell'acqua - Pompa a Dces</value>
   </data>
   <data name="DRYER - FLUID BED" xml:space="preserve">
-    <value>Essiccatore - Letto Fluido</value>
+    <value>Essicatore - Letto Fluido</value>
   </data>
   <data name="DRYER - ASPIRATION" xml:space="preserve">
     <value>Asciugatrice - Aspirazione</value>
